# sandaGameJam

./: CMakeLists.txt  LICENSE  README.md  gameCore.hpp  main.cpp
headerFiles/: cellularAutomata.hpp  gameCore.hpp
src/: celullarAutomata.cpp  gameCore.cpp
